added BlogPost resource
