# resources/lang/en/models/blogPosts.php
@@ -1,0 +1,25 @@
+<?php
+
+return array (
+  'singular' => 'BlogPost',
+  'plural' => 'BlogPosts',
+  'fields' => 
+  array (
+    'id' => 'Id',
+    'author_id' => 'Author Id',
+    'category_id' => 'Category Id',
+    'title' => 'Title',
+    'seo_title' => 'Seo Title',
+    'excerpt' => 'Excerpt',
+    'body' => 'Body',
+    'image' => 'Image',
+    'slug' => 'Slug',
+    'meta_description' => 'Meta Description',
+    'status' => 'Status',
+    'featured' => 'Featured',
+    'created_at' => 'Created At',
+    'updated_at' => 'Updated At',
+    'tags' => 'Tags',
+    'published_date' => 'Published Date',
+  ),
+);
